Save all the chnages perfectly

--- a/about.html
+++ b/about.html
@@ -125,7 +125,6 @@
             </nav>
         </div>
     </header>
-
     <main class="py-8 sm:py-12 md:py-16 lg:py-20">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
 
@@ -171,11 +170,11 @@
                 </div>
                 <div
                     class="h-48 sm:h-64 md:h-full min-h-[250px] bg-section-bg-alt rounded-lg sm:rounded-xl shadow-inner flex items-center justify-center p-4 sm:p-6 order-1 md:order-2 overflow-hidden relative">
-                    <img src="{{ url_for('uploaded_file', filename='About.jpg') }}" 
-                         alt="Aachary Narayan Pawar and students practicing yoga" 
-                         class="absolute inset-0 w-full h-full object-cover">
+                    <img src="{{ url_for('uploaded_file', filename='About.jpg') }}"
+                        alt="Aachary Narayan Pawar and students practicing yoga"
+                        class="absolute inset-0 w-full h-full object-cover">
                 </div>
-                </div>
+            </div>
             
             <div
                 class="bg-section-bg-alt bg-opacity-30 p-6 sm:p-8 md:p-10 rounded-lg sm:rounded-xl shadow-yoga mb-12 sm:mb-16 md:mb-20">
@@ -196,6 +195,7 @@
                     </div>
                 </div>
             </div>
+
             <div class="text-center mb-10 sm:mb-12 md:mb-16">
                 <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-text-heading mb-6 sm:mb-8 px-2">Our
                     Timeline of Service</h2>
@@ -230,7 +230,7 @@
                         <div class="w-full sm:w-1/2 sm:pr-6 md:pr-8"></div>
                     </div>
                     <div class="flex flex-col sm:flex-row items-start sm:items-center w-full my-6 sm:my-8">
-                        <div class="w-full sm:w-1/2 sm:pr-6 md:pr-8 sm:text-right mb-4 sm:mb-0 pl-6 sm:pl-0">
+                        <div class="w-full sm:w-1/PCA-1/2 sm:pr-6 md:pr-8 sm:text-right mb-4 sm:mb-0 pl-6 sm:pl-0">
                             <p class="text-xs sm:text-sm font-light text-text-body mb-1">Today</p>
                             <h4 class="text-lg sm:text-xl font-semibold text-text-heading mb-2">Family Mission
                             </h4>
@@ -244,6 +244,7 @@
                     </div>
                 </div>
             </div>
+
             <div id="experts" class="text-center mb-12 sm:mb-16 md:mb-20">
                 <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-text-heading mb-2 sm:mb-3">Meet Our
                     Experts</h2>
@@ -303,7 +304,7 @@
                     <a href="{{ url_for('home') }}" class="flex items-center gap-3 mb-4"
                         aria-label="Pawar's Yog Therapy Center - Homepage">
                         <img src="{{ url_for('uploaded_file', filename='Logo.png') }}"
-                            alt="Pawar's Yog Therapy Center Logo" class="w-auto h-14 bg-white rounded-full p-1">
+                            alt="Pawar's Yoga Therapy Center Logo" class="w-auto h-14 bg-white rounded-full p-1">
                         <div>
                             <h2 class="text-lg font-bold text-text-light leading-tight">Pawar's Yog Therapy Center</h2>
                             <p class="text-xs text-white/70">Since 2019</p>
@@ -372,7 +373,6 @@
             </div>
         </div>
     </footer>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
 
