--- a/index.html
+++ b/index.html
@@ -308,7 +308,6 @@
             </nav>
         </div>
     </header>
-
     <main>
 
         <section id="hero-section" class="py-20 md:py-28 bg-page-bg relative overflow-hidden">
@@ -339,7 +338,6 @@
                 </div>
             </div>
         </section>
-
         <section id="services" class="py-16 md:py-20 bg-section-bg-alt">
             <div class="container mx-auto px-6 sm:px-8 lg:px-12">
                 <h2 class="text-3xl font-bold text-center text-text-heading mb-3">
@@ -363,7 +361,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Power%20Yoga%20sessions.%0A%0ACould%20you%20please%20confirm%20your%20class%20schedule%2C%20share%20the%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -384,7 +382,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Medical%20Yoga.%0A%0ACould%20you%20please%20confirm%20your%20availability%2C%20share%20the%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -405,7 +403,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Rope%20Belt%20Therapy.%0A%0ACould%20you%20please%20confirm%20your%20availability%2C%20share%20the%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -427,7 +425,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Pranayam%20sessions.%0A%0ACould%20you%20please%20confirm%20your%20availability%2C%20share%20the%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -448,7 +446,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Massage%20Therapy.%0A%0ACould%20you%20please%20confirm%20your%20availability%2C%20share%20your%20type-specific%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -470,7 +468,7 @@
                             </ul>
                             <div class="service-book-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20would%20like%20to%20book%20an%20appointment%20for%20Ayurvedic%20Naturopathy.%0A%0ACould%20you%20please%20confirm%20your%20availability%2C%20share%20your%20fees%2C%20and%20let%20me%20know%20the%20process%20for%20scheduling%20a%20session%3F%0A%0AThank%20you%21"
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 inline-block">
                                     Book Appointment
                                 </a>
@@ -480,7 +478,6 @@
                 </div>
             </div>
         </section>
-
         <section id="success-stories" class="py-12 md:py-16 bg-text-light-accent">
             <div class="container mx-auto px-6 sm:px-8 lg:px-12">
                 <h2 class="text-3xl font-bold text-center text-text-light mb-3">
@@ -538,14 +535,13 @@
                     </div>
                 </div>
                 <div class="text-center mt-10">
-                    <a href="https://share.google/hkE37yd4CrFUuquzN" target="_blank"
+                    <a href="https://share.google/hkE37yd4CrFUuquzN" target="_blank" rel="noopener noreferrer"
                         class="bg-page-bg text-primary-accent font-semibold px-8 py-3 rounded-md text-base hover:bg-white/90 transition duration-200 inline-block shadow-lg">
                         More Reviews <i class="fa-solid fa-arrow-right ml-2"></i>
                     </a>
                 </div>
             </div>
         </section>
-
         <section id="products" class="py-16 md:py-20 bg-section-bg-alt">
             <div class="container mx-auto px-6 sm:px-8 lg:px-12">
                 <h2 class="text-3xl font-bold text-center text-text-heading mb-3">
@@ -570,7 +566,7 @@
                             <div class="buy-btn">
                                 <a href="https://wa.me/918550921037?text=Hello%2C%20I%20am%20interested%20in%20buying%20the%20{{ product.name|urlencode }}%20({% if product.price and product.price > 0 %}₹{{ "
                                     %.2f"|format(product.price) }}{% endif %}).%20Please%20provide%20more%20details."
-                                    target="_blank"
+                                    target="_blank" rel="noopener noreferrer"
                                     class="product-buy-btn bg-primary-accent text-text-light font-semibold px-5 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200 w-full text-center inline-block">
                                     Buy Now
                                 </a>
@@ -584,7 +580,6 @@
                 </div>
             </div>
         </section>
-
         <section id="contact" class="py-16 md:py-20 bg-page-bg">
             <div class="container mx-auto px-6 sm:px-8 lg:px-12">
                 <h2 class="text-3xl font-bold text-center text-text-heading mb-3">Contact Us</h2>
@@ -652,8 +647,7 @@
                 </div>
             </div>
         </section>
-
-    </main>
+        </main>
 
     <footer class="footer-bg text-white/70 pt-16 pb-8">
         <div class="container mx-auto px-6 sm:px-8 lg:px-12 footer-content">
@@ -673,14 +667,16 @@
                         Dedicated to holistic wellness through authentic yoga therapy.
                     </p>
                     <div class="flex space-x-4 mt-5">
-                        <a href="https://www.facebook.com/vrushabh.pawar.92/" target="_blank" aria-label="Facebook"
+                        <a href="https://www.facebook.com/vrushabh.pawar.92/" target="_blank" rel="noopener noreferrer"
+                            aria-label="Facebook"
                             class="text-lg hover:text-text-light-accent transition duration-200"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.instagram.com/pawarsyogtherapycenter/" target="_blank"
-                            aria-label="Instagram"
+                            rel="noopener noreferrer" aria-label="Instagram"
                             class="text-lg hover:text-text-light-accent transition duration-200"><i
                                 class="fab fa-instagram"></i></a>
-                        <a href="https://wa.me/918550921037" target="_blank" aria-label="WhatsApp"
+                        <a href="https://wa.me/918550921037" target="_blank" rel="noopener noreferrer"
+                            aria-label="WhatsApp"
                             class="text-lg hover:text-text-light-accent transition duration-200"><i
                                 class="fab fa-whatsapp"></i></a>
                     </div>
@@ -754,7 +750,6 @@
             </div>
         </div>
     </footer>
-
     <div id="consult-modal-overlay" class="fixed inset-0 bg-black/60 z-40 hidden"></div>
     <div id="consult-modal"
         class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-page-bg rounded-lg shadow-xl z-50 w-full max-w-md p-6 hidden">
@@ -793,23 +788,22 @@
             </div>
         </form>
     </div>
-
     <div id="request-success-overlay" class="fixed inset-0 bg-black/60 z-80 hidden"></div>
     <div id="request-success-modal"
         class="fixed top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 bg-page-bg rounded-lg shadow-xl z-90 w-full max-w-sm p-8 hidden text-center">
         <i class="fa-solid fa-paper-plane text-5xl text-primary-accent mb-5"></i>
         <h3 class="text-xl font-semibold text-secondary-accent mb-3">Request Sent!</h3>
         <p class="text-text-body/90 text-sm mb-6">
-           Your request has been successfully sent to our Pawar's Yog Therapy Center. Our team will contact you soon.
+            Your request has been successfully sent to our Pawar's Yog Therapy Center. Our team will contact you soon.
             <br><br>
-            <strong>Note:</strong> There is a charge of five hundred rupees for the consultation. Our team will provide you with the details after they contact you.
+            <strong>Note:</strong> There is a charge of five hundred rupees for the consultation. Our team will provide
+            you with the details after they contact you.
         </p>
         <button id="close-request-success-modal-btn"
             class="w-full bg-primary-accent text-text-light font-semibold px-8 py-2.5 rounded-md text-sm hover:bg-accent-hover transition duration-200">
             OK
         </button>
     </div>
-
     <script>
         document.addEventListener('DOMContentLoaded', function () {
 
@@ -957,12 +951,12 @@
             if (consultForm) {
                 consultForm.addEventListener('submit', async function (e) {
                     e.preventDefault();
-                    
+
                     const name = document.getElementById('consult-name').value;
                     const contact = document.getElementById('consult-contact').value;
                     const notes = document.getElementById('consult-instructions').value;
                     const submitButton = consultForm.querySelector('button[type="submit"]');
-                    
+
                     submitButton.disabled = true;
                     submitButton.textContent = 'Sending...';
 
@@ -1012,7 +1006,7 @@
                     const whatsappMessage = `Hello, I have an inquiry.%0A%0A*Name:* ${encodeURIComponent(name)}%0A*Message:* ${encodeURIComponent(message)}`;
                     const whatsappUrl = `https://wa.me/918550921037?text=${whatsappMessage}`;
 
-                    window.open(whatsappUrl, '_blank');
+                    window.open(whatsappUrl, '_blank', 'noopener,noreferrer');
                     contactForm.reset();
                 });
             }
